@@ -20,15 +20,16 @@ package ch.cyberduck.core;
  */
 
 import org.apache.commons.lang3.reflect.ConstructorUtils;
-import org.apache.log4j.Logger;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 
 public class HostKeyCallbackFactory extends Factory<HostKeyCallback> {
-    private static final Logger log = Logger.getLogger(HostKeyCallbackFactory.class);
+    private static final Logger log = LogManager.getLogger(HostKeyCallbackFactory.class);
 
-    private Constructor<HostKeyCallback> constructor;
+    private Constructor<? extends HostKeyCallback> constructor;
 
     protected HostKeyCallbackFactory() {
         super("factory.hostkeycallback.class");
@@ -43,11 +44,11 @@ public class HostKeyCallbackFactory extends Factory<HostKeyCallback> {
                 if(null == constructor) {
                     log.warn(String.format("No matching constructor for parameter %s", c.getClass()));
                     // Call default constructor for disabled implementations
-                    return clazz.newInstance();
+                    return clazz.getDeclaredConstructor().newInstance();
                 }
                 return constructor.newInstance(c);
             }
-            catch(InstantiationException | InvocationTargetException | IllegalAccessException e) {
+            catch(InstantiationException | InvocationTargetException | IllegalAccessException | NoSuchMethodException e) {
                 log.error(String.format("Failure loading callback class %s. %s", clazz, e.getMessage()));
                 return new DisabledHostKeyCallback();
             }
