@@ -16,15 +16,16 @@ package ch.cyberduck.core;
  */
 
 import org.apache.commons.lang3.reflect.ConstructorUtils;
-import org.apache.log4j.Logger;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 
 public class PasswordCallbackFactory extends Factory<PasswordCallback> {
-    private static final Logger log = Logger.getLogger(PasswordCallbackFactory.class);
+    private static final Logger log = LogManager.getLogger(PasswordCallbackFactory.class);
 
-    private Constructor<PasswordCallback> constructor;
+    private Constructor<? extends PasswordCallback> constructor;
 
     protected PasswordCallbackFactory() {
         super("factory.passwordcallback.class");
@@ -38,11 +39,11 @@ public class PasswordCallbackFactory extends Factory<PasswordCallback> {
             if(null == constructor) {
                 log.warn(String.format("No matching constructor for parameter %s", controller.getClass()));
                 // Call default constructor for disabled implementations
-                return clazz.newInstance();
+                return clazz.getDeclaredConstructor().newInstance();
             }
             return constructor.newInstance(controller);
         }
-        catch(InstantiationException | InvocationTargetException | IllegalAccessException e) {
+        catch(InstantiationException | InvocationTargetException | IllegalAccessException | NoSuchMethodException e) {
             log.error(String.format("Failure loading callback class %s. %s", clazz, e.getMessage()));
             return new DisabledPasswordCallback();
         }
