@@ -20,13 +20,14 @@ import ch.cyberduck.core.Factory;
 import ch.cyberduck.core.SingleThreadController;
 
 import org.apache.commons.lang3.reflect.ConstructorUtils;
-import org.apache.log4j.Logger;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 
 public class PeriodicUpdateCheckerFactory extends Factory<PeriodicUpdateChecker> {
-    private static final Logger log = Logger.getLogger(PeriodicUpdateCheckerFactory.class);
+    private static final Logger log = LogManager.getLogger(PeriodicUpdateCheckerFactory.class);
 
     public PeriodicUpdateCheckerFactory() {
         super("factory.updater.class");
@@ -34,15 +35,15 @@ public class PeriodicUpdateCheckerFactory extends Factory<PeriodicUpdateChecker>
 
     public PeriodicUpdateChecker create(final Controller controller) {
         try {
-            final Constructor<PeriodicUpdateChecker> constructor = ConstructorUtils.getMatchingAccessibleConstructor(clazz, controller.getClass());
+            final Constructor<? extends PeriodicUpdateChecker> constructor = ConstructorUtils.getMatchingAccessibleConstructor(clazz, controller.getClass());
             if(null == constructor) {
                 log.warn(String.format("No matching constructor for parameter %s", controller.getClass()));
                 // Call default constructor for disabled implementations
-                return clazz.newInstance();
+                return clazz.getDeclaredConstructor().newInstance();
             }
             return constructor.newInstance(controller);
         }
-        catch(InstantiationException | InvocationTargetException | IllegalAccessException e) {
+        catch(InstantiationException | InvocationTargetException | IllegalAccessException | NoSuchMethodException e) {
             log.error(String.format("Failure loading callback class %s. %s", clazz, e.getMessage()));
             return new DisabledPeriodicUpdater();
         }
